test-suite/output/bug_20242.out
File "./output/bug_20242.v", line 6, characters 52-63:
The command has indeed failed with message:
Signature components for field B do not match:
conversion of polymorphic values generates additional constraints: 
""foo@{Type ; Set} bug_20242.B.A@{Var(0)}"" compared to 
""foo@{Type ; Var(0)} bug_20242.B.A@{Var(0)}"".
Error: The module B needs to be closed.


coqc exited with code 1
